wrote basic commands in index

--- a/index.html
+++ b/index.html
@@ -2,3 +2,18 @@ untracked new file
 staged --- add kardi but commit nahi ki
 modified --- file(already existing) mei kuch change
 unmodified
+
+
+git clone
+    status
+    add <!--file name-->
+    add .
+
+git commit -m "some message"
+git push origin main
+
+
+git branch
+
+git branch -M <!--name to rename-->
+
