--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<p style="background-color: aqua; color: beige; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+    
 untracked new file
 staged --- add kardi but commit nahi ki
 modified --- file(already existing) mei kuch change
@@ -17,3 +19,4 @@ git branch
 
 git branch -M <!--name to rename-->
 
+</p>
