some more styling to p

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p style="background-color: aqua; color: beige; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+<p style="background-color: aqua; color: black; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; font-weight: bold; font-style: italic;">
     
 untracked new file
 staged --- add kardi but commit nahi ki
