--- a/index.html
+++ b/index.html
@@ -17,3 +17,6 @@ git branch
 
 git branch -M <!--name to rename-->
 
+<h1>
+    this line was written and then merged with main on github website
+</h1>
